CPG-DEV/src/objects/Plant__c.object
<CustomObject>
    <description>Cargill Product Production Plants</description>
    <fields>
        <fullName>Business__c</fullName>
        <globalPicklist>CargillBusiness</globalPicklist>
        <label>Business</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CapitalImprovement__c</fullName>
        <label>Capital Improvement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <globalPicklist>Country</globalPicklist>
        <label>Country</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Alias__c</fullName>
        <label>Plant Alias</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Region A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region D</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UnitOfMeasure__c</fullName>
        <globalPicklist>Unit_of_Measure_Combined</globalPicklist>
        <label>Unit of Measure</label>
        <type>Picklist</type>
    </fields>
    <label>Plant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Plant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plants</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>